# mira-feedback

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: default.yaml  local.yaml.example
feedback/: GRADING_WORKFLOW.md  MIRA_WORKFLOW.md
feedback/templates/: rubric_2pt.md
hw_feedback/: .gitignore
mira/evidence/: __init__.py
mira/evidence/plugins/: __init__.py  base.py  markdown.py  pdf.py  utils.py
mira/libs/: __init__.py  config_loader.py  llm.py
mira/libs/evidence/: builder.py  models.py
mira/libs/evidence/plugins/: __init__.py  code.py  html.py  markdown.py  notebook.py  pdf.py  structured.py  tabular.py  text.py  utils.py
mira/libs/local_anonymizer/: __init__.py  anonymizer.py
mira/scripts/: grade_with_claude_cli.py
mira/tools/dir_anonymizer/: accuracy.py  anonymizer.py  cli.py
mira/tools/dir_anonymizer/test_cases/: basic_pii.yaml  reset_test.yaml
mira/tools/grading_feedback/: __init__.py  batch_cli.py  batch_grader.py  cli.py  grader.py  models.py  rubric_parser.py  submission_utils.py
mira/tools/grading_feedback/calibration/: __init__.py  calibration_cli.py  pattern_analyzer.py
mira/tools/grading_review_interface/: README.md  app.py  review_interface.py
mira/tools/grading_review_interface/static/: app.js  style.css
mira/tools/grading_review_interface/templates/: index.html
mira/tools/grading_reviewer/: __init__.py  app.py  models.py
mira/tools/moodle_prep/: __init__.py  cli.py  moodle_grades_handler.py  processor.py  update_grades_cli.py  utils.py
shilads_helpers/: __init__.py
shilads_helpers/libs/: config_loader.py  llm.py  text_chunker.py
shilads_helpers/libs/local_anonymizer/: anonymizer.py  deanonymizer.py  llm_backend.py  openpipe_backend.py  presidio_backend.py
shilads_helpers/scripts/: __init__.py  grade_with_claude.sh  grade_with_claude_cli.py
shilads_helpers/scripts/templates/: CLAUDE_TEMPLATE.md
shilads_helpers/tools/: __init__.py
shilads_helpers/tools/dir_anonymizer/: __init__.py  accuracy.py  anonymizer.py  cli.py  deanonymizer.py
shilads_helpers/tools/dir_anonymizer/test_cases/: basic_pii.yaml  names_orgs.yaml  reset_test.yaml
shilads_helpers/tools/grading_feedback/: __init__.py  batch_cli.py  batch_grader.py  cli.py  grader.py  models.py  rubric_parser.py  submission_utils.py
shilads_helpers/tools/grading_feedback/calibration/: calibration_models.py  rubric_calibrator.py
shilads_helpers/tools/grading_feedback/test_cases/: sample_rubric.md  sample_submission.py
shilads_helpers/tools/grading_review_interface/: __init__.py  app.py  cli.py
shilads_helpers/tools/grading_review_interface/static/: style.css
shilads_helpers/tools/grading_review_interface/templates/: index.html
shilads_helpers/tools/moodle_prep/: __init__.py  cli.py  moodle_grades_handler.py  processor.py  utils.py
tests/: test_batch_grader.py  test_config_loader.py  test_dir_anonymizer.py  test_dir_consistency.py  test_evidence_builder.py  test_grading_feedback.py  test_grading_feedback_integration.py  test_llm.py  test_llm_backend_chunking.py  test_llm_integration.py  test_local_anonymizer.py  test_moodle_integration.py  test_moodle_prep.py  test_submission_utils.py  test_text_chunker.py  test_update_moodle_grades.py
tests/test_data/moodle_submissions/Alice Johnson_101234_assignsubmission_file/: assignment.html
tests/test_data/moodle_submissions/Bob Smith_102345_assignfeedback_comments/: feedback.html
tests/test_data/moodle_submissions/Bob Smith_102345_assignsubmission_onlinetext/: onlinetext.html
tests/test_data/moodle_submissions/Charlie Davis_103456_assignsubmission_file/: README.md  main.py
tests/test_data/moodle_submissions/Diana Chen_104567_assignfeedback_file/: rubric.txt
tests/test_data/moodle_submissions/Diana Chen_104567_assignsubmission_file/: report.md
tests/test_data/moodle_submissions/Maria Garcia Lopez_105678_assignsubmission_file/: essay.txt
