[project]
name = "shilads-helpers"
version = "0.1.0"
description = "Helper scripts and tools for academic and industry work"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Shilad Sen" }
]
dependencies = [
    "PyYAML>=6.0",
    "tqdm>=4.60.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=0.19.0",
    "sentencepiece>=0.2.0",
    "protobuf>=6.0.0",
    "faker>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
anonymize-dir = "shilads_helpers.tools.dir_anonymizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shilads_helpers"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"