[project]
name = "shilads-helpers"
version = "0.1.0"
description = "Helper scripts and tools for academic and industry work"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Shilad Sen" }
]
dependencies = [
    "PyYAML>=6.0",
    "tqdm>=4.60.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=0.19.0",
    "sentencepiece>=0.2.0",
    "protobuf>=6.0.0",
    "faker>=20.0.0",
    "html-to-markdown>=1.0.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.38",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
anonymize-dir = "shilads_helpers.tools.dir_anonymizer.cli:main"
prep-moodle = "shilads_helpers.tools.moodle_prep.cli:main"
grade-submission = "shilads_helpers.tools.grading_feedback.cli:main"
grade-batch = "shilads_helpers.tools.grading_feedback.batch_cli:main"
grade-review = "shilads_helpers.tools.grading_review_interface.cli:main"
grade-calibrate = "shilads_helpers.tools.grading_feedback.calibration.calibration_cli:main"
grade-with-claude = "shilads_helpers.scripts.grade_with_claude_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shilads_helpers"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --without-slow-integration"
markers = [
    "integration_test: mark test as integration test (requires API keys)",
    "slow_integration_test: mark test as slow integration test (skipped by default)",
    "asyncio: mark test as async",
]